--- a/css/_header.css
+++ b/css/_header.css
@@ -15,6 +15,9 @@
 	height:32px;
 	width:200px;
 }
+.div-navbar-header-menu{
+	margin: 14.5px -15px;	
+}
 .navbar-header-menu{
 	margin: 7.5px -15px;	
 }
@@ -53,3 +56,33 @@
 .breadcrumb > .active {
   color: #777; 
  }
+
+ .breadcrumb {
+  padding: 8px 15px;
+  margin-bottom: 20px;
+  list-style: none;
+  background-color: transparent;
+  border-radius: 4px; }
+
+.container-promo {
+    float: right;
+    display: block;
+    font-size: 12px;
+}
+
+.container-secondary{
+	margin-bottom: 0;
+    margin-right: 0;
+    color: #FFF;
+    position: relative;
+}
+.promo-item {
+    color: #FFF;
+}
+
+.container-promo-secondary {
+    float: right;
+    display: block;
+    font-size: 12px;
+    margin-top: -10px;
+}
