--- a/css/mediasFooter.css
+++ b/css/mediasFooter.css
@@ -1,4 +1,10 @@
 @media (max-width:1000px){
+	.footer-express>hr{
+		width:99%;
+	}
+	.container-footer{
+		margin:0px;
+	}
 	.footer-express .social{
 		margin-right: 20px;
 	}
