--- a/css/_header.css
+++ b/css/_header.css
@@ -123,7 +123,7 @@
     width: 900px;
     height: 800px;
     color: #black;
-    text-align: left;
+    text-align: center;
     border-radius: 6px;
     border-color: black;
     padding: 5px 0;
