--- a/css/catalog.css
+++ b/css/catalog.css
@@ -56,3 +56,40 @@ a {
     color: #b7b7b7;
     text-decoration: none;
 }
+
+h2 {
+    font-family: 'exp-bold',Arial;
+    font-size: 2.143em;
+    text-transform: uppercase;
+    border-bottom: 1px solid #333;
+    margin-bottom: 0px;
+}
+
+#description-seo h2 {
+    margin-bottom: 10px;
+}
+
+p a {
+    color: #3895ad;
+}
+
+.numbers li{
+	display:inline-block;
+}
+
+.header-nav-position{
+	float:right;
+	padding-top:2rem;
+}
+
+.numbers li em {
+    background: #000;
+    color: #fff;
+    font-style: normal;
+    padding: .25em .5em;
+    border-radius: 50%;
+}
+
+.product-info{
+	
+}
