--- a/css/_header.css
+++ b/css/_header.css
@@ -83,10 +83,11 @@ body{
 	display:none;
     position: absolute;
     background-color: #fff;
-    width: 1048px;
+    width: 1350%;
 	padding:30px 30px 28px 30px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	left:auto;
+	z-index:3;
 }
 .row-custom{
 	margin-left:0px;
